Fixed color overflow in global styling & spaced out brand name

--- a/www/src/styles/global.css
+++ b/www/src/styles/global.css
@@ -40,9 +40,7 @@
 }
 
 html,
-body {
-  height: 100%;
-}
+body {}
 
 body {
   font-family: var(--font-body);
